--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,9 @@
-# 核心框架
-tensorflow>=2.12.0
-torch>=2.0.0
-torchvision>=0.15.0
+# 核心依赖
 mediapipe>=0.10.10
-
-# 科学计算
-numpy>=1.21.6
-scipy>=1.10.0
-scikit-learn>=1.3.0
-matplotlib>=3.7.0
-opencv-python>=4.9.0.80
-Pillow>=9.5.0
-
-# 工具包
-absl-py>=0.15.0
-astunparse>=1.6.3
-attrs>=21.4.0
-cachetools>=4.2.4
-certifi>=2024.0.0
-charset-normalizer>=2.0.8
-colorama>=0.4.4
 cvzone>=1.5.6
-cycler>=0.11.0
-flatbuffers>=1.12
-gast>=0.4.0
-google-auth>=1.35.0
-google-auth-oauthlib>=0.4.6
-google-pasta>=0.2.0
-grpcio>=1.48.0
-h5py>=3.0
-idna>=3.3
-importlib-metadata>=4.8.2
-joblib>=1.1.0
-Keras-Preprocessing>=1.1.2
-kiwisolver>=1.3.1
-Markdown>=3.3.6
-oauthlib>=3.1.1
-opt-einsum>=3.3.0
-pathspec>=0.5.5
-pyparsing>=3.0.6
-python-dateutil>=2.8.2
-PyYAML>=6.0
-requests>=2.31.0
-requests-oauthlib>=1.3.0
-rsa>=4.8
-six>=1.15.0
-tensorboard>=2.12.0
-tensorboard-data-server>=0.7.0
-tensorboard-plugin-wit>=1.8.0
-termcolor>=1.1.0
-threadpoolctl>=3.0.0
-tqdm>=4.62.3
-typing-extensions>=4.0.0
-urllib3>=2.0.0
-Werkzeug>=2.0.2
-wrapt>=1.12.1
-zipp>=3.6.0
-types-pytz>=2022.1.1
+opencv-python>=4.9.0.80
+numpy>=1.21.6
+
+# MediaPipe和cvzone的必要依赖
+absl-py>=0.15.0
+protobuf>=3.20.0
